--- a/index.html
+++ b/index.html
@@ -436,14 +436,14 @@
       osc.frequency.setValueAtTime(baseFreq * 2, now);
 
       const vel = Math.min(Math.max(velocity, 0), 1);
-      const minVol = 1.0;
-      const maxVol = 10.0;
+      const minVol = 0.7;
+      const maxVol = 1.0;
       const gainValue = minVol + vel * (maxVol - minVol);
 
       gain.gain.setValueAtTime(gainValue, now);
 
       // Sustain: min ≈ old 50%, max ≈ 5s
-      const MIN_SUSTAIN = 1.0; // seconds
+      const MIN_SUSTAIN = 1.375; // seconds
       const MAX_SUSTAIN = 5.0;   // seconds
       const sustainDuration =
         MIN_SUSTAIN + sustainFactor * (MAX_SUSTAIN - MIN_SUSTAIN);
@@ -469,12 +469,15 @@
 
       let transform;
       if (dir === "left") {
+        // rotate left
         transform = `translateY(0px) rotate(${-amp}deg)`;
       } else if (dir === "right") {
         transform = `translateY(0px) rotate(${amp}deg)`;
       } else if (dir === "up") {
+        // move up (toward you)
         transform = `translateY(${-verticalOffset}px) rotate(0deg)`;
       } else if (dir === "down") {
+        // move down (away from you)
         transform = `translateY(${verticalOffset}px) rotate(0deg)`;
       } else {
         transform = `translateY(0px) rotate(${(Math.random() < 0.5 ? -1 : 1) * amp}deg)`;
@@ -486,7 +489,7 @@
       }, 180);
     }
 
-    // ---- MOTION HANDLING (peak + directional change) ----
+    // ---- MOTION HANDLING (peak + directional change, using build vector) ----
     let currentNote = null;
     let lastRingTime = 0;
 
@@ -499,29 +502,45 @@
     let lastMagnitude = null;
     let lastDelta = 0;              // previous signed delta
 
-    // Decide visual direction from *current* acceleration
-    function computeVisualDirFromAccel(ax, ay, az) {
-      const absX = Math.abs(ax);
-      const absY = Math.abs(ay);
-      const absZ = Math.abs(az);
+    let buildAx = 0, buildAy = 0, buildAz = 0;
+    let haveBuildVector = false;
 
-      const maxComp = Math.max(absX, absY, absZ);
+    // Lock to four cardinal visual directions based on a collapsed 2D vector:
+    // horizontal (left/right) vs combined vertical (away/up vs toward/down).
+    function computeVisualDirFromBuildVector() {
+      const ax = buildAx;
+      const ay = buildAy;
+      const az = buildAz;
 
-      // If everything is tiny / noisy, just fall back
-      if (maxComp < 0.8) {
+      // Interpret coordinates for an upright phone, screen facing you:
+      // - X: left/right
+      // - Z: forward/back
+      // - Y: up/down
+      //
+      // We combine "up + away" vs "down + toward" into one vertical axis.
+      const horiz = ax;                  // right positive, left negative
+      const vertCombined = (-az) + (-ay);
+      //  -az: away (forward) => positive, toward => negative
+      //  -ay: up => positive, down => negative
+      // So positive vertCombined ≈ up/away, negative ≈ down/toward.
+
+      const absH = Math.abs(horiz);
+      const absV = Math.abs(vertCombined);
+
+      // If there's not a clear winner, bail to a simple horizontal tilt
+      if (absH < 0.8 && absV < 0.8) {
         return Math.random() < 0.5 ? "left" : "right";
       }
 
-      if (maxComp === absX) {
-        // X axis: screen plane, positive to the right
-        return ax > 0 ? "right" : "left";
-      } else if (maxComp === absY) {
-        // Y axis: screen plane, positive towards the top
-        return ay > 0 ? "up" : "down";
+      if (absH > absV) {
+        // Horizontal dominates -> left/right
+        // Swing right (horiz > 0) -> bell moves left
+        return horiz > 0 ? "left" : "right";
       } else {
-        // Z axis: perpendicular to screen, positive out of screen (toward you)
-        // Map toward you to "up", away from you to "down"
-        return az > 0 ? "up" : "down";
+        // Vertical dominates -> up/down-like
+        // Positive (up/away) -> bell down
+        // Negative (down/toward) -> bell up
+        return vertCombined > 0 ? "down" : "up";
       }
     }
 
@@ -549,12 +568,21 @@
       const absDelta = Math.abs(signedDelta);
       const now = performance.now();
 
+      // Capture initial build vector once per swing (first time we exceed threshold)
+      if (!haveBuildVector && absDelta > DELTA_RING_MIN) {
+        buildAx = ax;
+        buildAy = ay;
+        buildAz = az;
+        haveBuildVector = true;
+      }
+
       // Reset swing when jerk settles
       if (absDelta < RESET_DELTA) {
         inSwing = false;
+        haveBuildVector = false;
       }
 
-      // Look for a reversal in jerk to mimic "swing then catch"
+      // We want a reversal: building in one direction, then switching
       const prevSign = Math.sign(lastDelta);
       const currSign = Math.sign(signedDelta);
       const wasBuilding = Math.abs(lastDelta) > DELTA_RING_MIN;
@@ -585,10 +613,14 @@
           const maxVel = 1.0;
           const velocity = minVel + t * (maxVel - minVel);
 
-          // Visual direction is based on the *current* acceleration vector
-          const visualDir = computeVisualDirFromAccel(ax, ay, az);
+          const visualDir = haveBuildVector
+            ? computeVisualDirFromBuildVector()
+            : (Math.random() < 0.5 ? "left" : "right");
 
           playBell(currentNote, velocity, visualDir);
+
+          // Reset build vector for next swing
+          haveBuildVector = false;
         }
       }
 
@@ -600,6 +632,7 @@
       lastMagnitude = null;
       lastDelta = 0;
       inSwing = false;
+      haveBuildVector = false;
       window.addEventListener("devicemotion", handleMotion);
     }
 
@@ -608,6 +641,7 @@
       lastMagnitude = null;
       lastDelta = 0;
       inSwing = false;
+      haveBuildVector = false;
     }
 
     // ---- MOTION PERMISSION (iOS) ----
